IndoorGML sample updated