@@ -38,8 +38,8 @@ public class IndoorGmlResidential {
 		CellSpaceType cs6 = indoorGmlBuilder.createCellSpace("c6");
 
 		// TODO use realistic values here
-		List<Double> coordinates = Arrays.asList(0.,0.,0.,1.,0.,0.,1.,1.,0.,0.,1.,0.);
-		for(CellSpaceType cs : List.of(cs1, cs2, cs3, cs4, cs5)){
+		List<Double> coordinates = Arrays.asList(0.,0.,0.,10.,0.,0.,10.,10.,0.,0.,10.,0.);
+		for(CellSpaceType cs : List.of(cs1, cs2, cs3, cs4, cs5,cs6)){
 			indoorGmlBuilder.add2DGeometry(cs, coordinates);
 			indoorGmlBuilder.add3DGeometry(cs, coordinates);
 		}
